; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty.c_tty_client_ready.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty.c_tty_client_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.client = type { i32, %struct.TYPE_5__*, %struct.TYPE_4__ }
%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 }
%struct.TYPE_4__ = type { i32, i32* }
%struct.window_pane = type { i64, i32* }

@CLIENT_REDRAWWINDOW = common dso_local global i32 0, align 4
@CLIENT_SUSPENDED = common dso_local global i32 0, align 4
@TTY_FREEZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.client*, %struct.window_pane*)* @tty_client_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tty_client_ready(%struct.client* %0, %struct.window_pane* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.client*, align 8
  %5 = alloca %struct.window_pane*, align 8
  store %struct.client* %0, %struct.client** %4, align 8
  store %struct.window_pane* %1, %struct.window_pane** %5, align 8
  %6 = load %struct.client*, %struct.client** %4, align 8
  %7 = getelementptr inbounds %struct.client, %struct.client* %6, i32 0, i32 1
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %9 = icmp eq %struct.TYPE_5__* %8, null
  br i1 %9, label %16, label %10

10:                                               ; preds = %2
  %11 = load %struct.client*, %struct.client** %4, align 8
  %12 = getelementptr inbounds %struct.client, %struct.client* %11, i32 0, i32 2
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %10, %2
  store i32 0, i32* %3, align 4
  br label %56

17:                                               ; preds = %10
  %18 = load %struct.client*, %struct.client** %4, align 8
  %19 = getelementptr inbounds %struct.client, %struct.client* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load i32, i32* @CLIENT_REDRAWWINDOW, align 4
  %22 = load i32, i32* @CLIENT_SUSPENDED, align 4
  %23 = or i32 %21, %22
  %24 = and i32 %20, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %56

27:                                               ; preds = %17
  %28 = load %struct.client*, %struct.client** %4, align 8
  %29 = getelementptr inbounds %struct.client, %struct.client* %28, i32 0, i32 2
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load i32, i32* @TTY_FREEZE, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %27
  store i32 0, i32* %3, align 4
  br label %56

36:                                               ; preds = %27
  %37 = load %struct.client*, %struct.client** %4, align 8
  %38 = getelementptr inbounds %struct.client, %struct.client* %37, i32 0, i32 1
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 0
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  %45 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = icmp ne i64 %43, %46
  br i1 %47, label %48, label %49

48:                                               ; preds = %36
  store i32 0, i32* %3, align 4
  br label %56

49:                                               ; preds = %36
  %50 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  %51 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %50, i32 0, i32 1
  %52 = load i32*, i32** %51, align 8
  %53 = icmp eq i32* %52, null
  br i1 %53, label %54, label %55

54:                                               ; preds = %49
  store i32 0, i32* %3, align 4
  br label %56

55:                                               ; preds = %49
  store i32 1, i32* %3, align 4
  br label %56

56:                                               ; preds = %55, %54, %48, %35, %26, %16
  %57 = load i32, i32* %3, align 4
  ret i32 %57
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
